# song-service/src/main/resources/openapi/song-service-api.yaml
@@ -103,6 +103,7 @@ components:
         - name
         - artist
         - album
+        - genre
         - duration
         - year
       properties:
@@ -124,6 +125,11 @@ components:
           minLength: 1
           maxLength: 100
           x-size-message: "Album name must be between 1 and 100 characters"
+        genre:
+          type: string
+          minLength: 1
+          maxLength: 100
+          x-size-message: "Genre name must be between 1 and 100 characters"
         duration:
           type: string
           pattern: "^[0-9][0-9]:[0-5][0-9]$"
